salesforce/force-app/main/default/objects/CheckSuppression__c/CheckSuppression__c.object-meta.xml
<CustomObject>
    <description>Per-install false-positive memory. Future scans skip suppressed check_ids.</description>
    <label>Check Suppression</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Check Suppression ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Suppressions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>