salesforce/force-app/main/default/objects/CheckSuppression__c/fields/CheckId__c.field-meta.xml
<CustomField>
    <fullName>CheckId__c</fullName>
    <label>Check Id</label>
    <type>Text</type>
    <length>32</length>
    <required>true</required>
    <externalId>true</externalId>
</CustomField>