salesforce/force-app/main/default/objects/CheckSuppression__c/fields/SuppressedAt__c.field-meta.xml
<CustomField>
    <fullName>SuppressedAt__c</fullName>
    <label>Suppressed At</label>
    <type>DateTime</type>
</CustomField>