salesforce/force-app/main/default/objects/CheckSuppression__c/fields/SuppressedBy__c.field-meta.xml
<CustomField>
    <fullName>SuppressedBy__c</fullName>
    <label>Suppressed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>OrgPrismSuppressions</relationshipName>
    <relationshipLabel>OrgPrism Suppressions</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>